# tsm_softweng

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  README_CI_CD.md
.github/workflows/: deploy.yml
McuLib/: CMakeLists.txt  MCUXpresso_CMakeLists.txt  McuLibVersion.h  RP2040_CMakeLists.txt  readme.txt
McuLib/FreeRTOS/Source/include/: freertos_tasks_c_additions.h  task.h
McuLib/FreeRTOS/Source/portable/GCC/ARM_CM33/non_secure/: portTicks.c
McuLib/FreeRTOS/Source/portable/GCC/ARM_CM4F/: port.c  portTicks.c
McuLib/FreeRTOS/Source/portable/MemMang/: heap_3.c
McuLib/HD44780/: DB01.c  DB01.h  DB01config.h  DB11.c  DB11.h  DB11config.h  DB21.c  DB21.h  DB21config.h  DB31.c  DB31.h  DB31config.h  DB41.c  DB41.h  DB41config.h  DB51.c  DB51.h  DB51config.h  DB61.c  DB61.h  DB61config.h  DB71.c  DB71.h  DB71config.h  EN1.c  EN1.h  EN1config.h  EN2.c  EN2.h  EN2config.h  RS1.c  RS1.h  RS1config.h  RW1.c  RW1.h  RW1config.h
McuLib/RNet/: McuNRF24L01.c  McuNRF24L01.h  McuNRF24L01config.h  McuRNet.c  McuRNet.h  McuRNetConfig.h  RApp.c  RMSG.c  RPHY.h  RStdIO.c  Radio.c  Radio.h
McuLib/SEGGER_Sysview/: McuSystemView.c  McuSystemView.h  McuSystemViewconfig.h  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h  SEGGER_SYSVIEW_Int.h
McuLib/config/: C11config.h  C21config.h  Clock1config.h  DQ1config.h  DbgRd1config.h  Input1config.h  InputRB1config.h  McuGenericI2Cconfig.h  McuI2cLibconfig.h  McuLibconfig.h  McuSHT31config.h  McuSTM32HALI2Cconfig.h  McuSemihost_config.h  McuWaitconfig.h  Output1config.h  SCL1config.h  SDA1config.h  WPpin1config.h
McuLib/littleFS/: McuLittleFS.c  McuLittleFS.h  lfs.c  lfs_util.c  lfs_util.h
McuLib/minIni/: minGlue-LittleFS.h
McuLib/rdimon/: CMakeLists.txt
McuLib/src/: C11.c  C11.h  C21.c  C21.h  Clock1.c  Clock1.h  DQ1.c  DQ1.h  DbgRd1.c  DbgRd1.h  Input1.c  Input1.h  McuArmTools.c  McuArmTools.h  McuDebounce.h  McuExtRTC.c  McuExtRTC.h  McuFontDisplay.c  McuFontDisplay.h  McuGDisplaySSD1306.c  McuGDisplaySSD1306.h  McuGFont.c  McuGPIO.c  McuGPIO.h  McuGenericI2C.c  McuGenericI2C.h  McuGenericSWI2C.c  McuGenericSWI2C.h  McuHardFault.h  McuI2CSpy.c  McuI2CSpy.h  McuI2cLib.c  McuLC709203F.c  McuLib.c  McuLib.h  McuLog.c  McuLog.h  McuPCF85063A.c  McuPCF85063A.h  McuRTOS.c  (+26 more)
doxy/: Doxyfile
gcov/: CMakeLists.txt  gcov_support.c  gcov_support.h  gcov_test.c  gcov_test.h
src/: CMakeLists.txt  IncludeMcuLibConfig.h  application.c  application.h  leds.c  leds_config.h  main.c  picoUSB.c  platform.c  platform.h
src/tests/: CMakeLists.txt  test_1.JLinkScript  test_2.JLinkScript  test_leds.h  tests.c  tests.h
